# lzw-ab

./: .appveyor.yml  .cirrus.yml  .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CPackConfig.cmake  LICENSE  PreLoad.cmake  README.md
.circleci/: config.yml
.github/workflows/: cmake.yml  macos.yml  ubuntu.yml  windows.yml
cmake/checks/: CheckBignumLibrary.cmake  CheckC11AndAbove.cmake  CheckC17.cmake  CheckGMP.cmake  CheckIPO.cmake  CheckPopt.cmake  CheckRunnable.cmake  CheckTomMath.cmake  GetBuildFlags.cmake  GetCoverageFlags.cmake  GetExportAllFlags.cmake  GetExportMode.cmake  GetPipeFlags.cmake  GetVerboseFlags.cmake
cmake/checks/C11AndAbove/: CMakeLists.txt
cmake/checks/C17/: CMakeLists.txt  main.c
cmake/checks/C18/: CMakeLists.txt  main.c
cmake/checks/GMP/: CMakeLists.txt  main.c
cmake/checks/IPO/: CMakeLists.txt  export.h  library.c  library.h  main.c
cmake/checks/Popt/: CMakeLists.txt  main.c
cmake/checks/TomMath/: CMakeLists.txt  main.c
cmake/checks/basic/: CMakeLists.txt  main.c
cmake/checks/export/: CMakeLists.txt  config.h.in  content.c  content.h  empty.c  export.h  main.c
cmake/checks/export_mode/: CMakeLists.txt  export.h.in
cmake/finds/: FindAsciidoc.cmake  FindGMP.cmake  FindPopt.cmake  FindTomMath.cmake
cmake/generators/: GenerateBytesWithReversedBitsTable.cmake  GenerateMasksForLastBitsTable.cmake
cmake/generators/bytes_with_reversed_bits_table/: CMakeLists.txt  main.c
cmake/generators/common/: print.h  print_data.h  toolchain.cmake
cmake/generators/masks_for_last_bits_table/: CMakeLists.txt  main.c
cmake/toolchains/: default.cmake
cmake/toolchains/clang/: address_sanitizer.cmake  coverage.cmake  default.cmake  leak_sanitizer.cmake  undefined_sanitizer.cmake
cmake/toolchains/gcc/: address_sanitizer.cmake  coverage.cmake  default.cmake  leak_sanitizer.cmake  undefined_sanitizer.cmake
cmake/toolchains/msvc/: address_sanitizer.cmake  coverage.cmake  default.cmake
doc/: compressor_ratio.txt
man/: CMakeLists.txt
man/file/: lzws_compress_file.3.txt  lzws_decompress_file.3.txt
man/generic/: lzws_compress.3.txt  lzws_compressor_finish.3.txt  lzws_compressor_get_initial_state.3.txt  lzws_create_destination_buffer_for_compressor.3.txt  lzws_create_destination_buffer_for_decompressor.3.txt  lzws_create_source_buffer_for_compressor.3.txt  lzws_create_source_buffer_for_decompressor.3.txt  lzws_decompress.3.txt  lzws_decompressor_get_initial_state.3.txt  lzws_resize_buffer.3.txt
man/string/: lzws_compress_string.3.txt  lzws_decompress_string.3.txt
scripts/: add_remotes.sh  coverage_toolchains.sh  release.sh  toolchains.sh  update.sh
scripts/clang/: complete.sh  format.sh
scripts/clang/config-format/: config-updates.yml  update.sh
scripts/gentoo/app-arch/lzws/: Manifest
scripts/test-images/: README.md  build.sh  env.sh  utils.sh
scripts/test-images/cross/aarch64-gentoo-linux-musl/: Dockerfile
scripts/test-images/cross/aarch64-unknown-linux-gnu/: Dockerfile  run.sh
scripts/test-images/cross/aarch64_be-gentoo-linux-musl/: Dockerfile  build.sh
scripts/test-images/cross/aarch64_be-unknown-linux-gnu/: Dockerfile
scripts/test-images/i686-gentoo-linux-musl/0-toolchain/: Dockerfile  build.sh  env.sh  run.sh
scripts/test-images/i686-gentoo-linux-musl/1-main/: Dockerfile  build.sh  env.sh  run.sh
scripts/test-images/i686-unknown-linux-gnu/0-toolchain/: Dockerfile
scripts/test-images/i686-unknown-linux-gnu/1-main/: Dockerfile
scripts/test-images/main-root/home/: coverage_toolchains.sh
scripts/test-images/native/i686-gentoo-linux-musl/: Dockerfile
scripts/test-images/native/i686-pc-linux-gnu/: Dockerfile
scripts/test-images/native/i686-unknown-linux-gnu/: Dockerfile  pull.sh  push.sh
scripts/test-images/native/x86_64-gentoo-linux-musl/: Dockerfile
scripts/test-images/native/x86_64-pc-linux-gnu/: Dockerfile
scripts/test-images/native/x86_64-unknown-linux-gnu/: Dockerfile  run.sh
scripts/test-images/toolchain-root/home/: toolchain.cmake  toolchain.sh
scripts/test-images/toolchains/: Dockerfile  build.sh  run.sh
scripts/test-images/x86_64-gentoo-linux-musl/: run.sh
scripts/test-images/x86_64-unknown-linux-gnu/1-main/: env.sh
src/: CMakeLists.txt  bigint.c  bigint.h  buffer.c  buffer.h  common.c  common.h  config.h.in  constants.h  export.h  file.c  file.h  generated_constants.c  generated_constants.c.in  log.h  string.c  string.h  utils.c  utils.h
src/bigint/: CMakeLists.txt  common.h  gmp_int.c  gmp_int.h  main.h  tommath_int.c  tommath_int.h
src/cli/: CMakeLists.txt  main.c
src/compressor/: CMakeLists.txt  code.c  code.h  common.c  common.h  current_code.c  current_code.h  header.c  header.h  main.c  main.h  remainder.c  remainder.h  state.c  state.h  symbol.c  symbol.h  utils.c  utils.h
src/compressor/alignment/: common.h  main.c  main.h  wrapper.c  wrapper.h
src/compressor/dictionary/: CMakeLists.txt
src/compressor/dictionary/linked-list/: common.h  main.c  main.h  wrapper.c  wrapper.h
src/compressor/dictionary/sparse-array/: CMakeLists.txt  common.h  main.c  main.h  wrapper.c  wrapper.h
src/compressor/ratio/: common.h  main.c  main.h  wrapper.c  wrapper.h
src/decompressor/: CMakeLists.txt  code.c  code.h  common.c  common.h  current_code.c  current_code.h  header.c  header.h  main.c  main.h  remainder.c  remainder.h  state.c  state.h  symbol.c  symbol.h  utils.c  utils.h
src/decompressor/alignment/: common.h  main.c  main.h  wrapper.c  wrapper.h
src/decompressor/dictionary/: common.h  main.c  main.h  wrapper.c  wrapper.h
src/examples/: CMakeLists.txt
src/examples/file/: CMakeLists.txt  main.c
src/examples/generic/: CMakeLists.txt  main.c
src/examples/string/: CMakeLists.txt  main.c
src/tests/: CMakeLists.txt  code.c  code.h  combination.c  combination.h  common.h  random_string.c  random_string.h  string_and_file.c  string_and_file.h
src/tests/invalid/: CMakeLists.txt  code.c  code.h  header.c  header.h  main.c  max_code_bit_length.c  max_code_bit_length.h
src/tests/valid/: CMakeLists.txt  code.c  code.h  data.c  data.h  main.c
(+42 files in other folders)
